--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
+      - run: cat /dev/null | sbt scalafmtCheckAll
+
       - run: cat /dev/null | sbt test:compile
 
       - save_cache:
