--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,4 @@ jobs:
 
       # upload coverage results to codecov
       - codecov/upload:
-          file: {{ coverage_report_filepath }}
+          file: "scoverage.xml"
