Fix CircleCI config for codecov
File path must be specified, not just name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,4 @@ jobs:
 
       # upload coverage results to codecov
       - codecov/upload:
-          file: "scoverage.xml"
+          file: "./target/scoverage-report/scoverage.xml"
