--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,5 @@
 version: 2.1
 
-orbs:
-  # code test coverage checker
-  codecov: codecov/codecov@1.0.5
-
 jobs:
   build:
     docker:
@@ -41,5 +37,4 @@ jobs:
       - run: cat /dev/null | sbt coverage test:test coverageReport
 
       # upload coverage results to codecov
-      - codecov/upload:
-          file: "./target/scoverage-report/scoverage.xml"
+      - run: bash <(curl -s https://codecov.io/bash)
