--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,9 @@
 version=2.0.0-RC8
+
+align.openParenCallSite = true
+align.openParenDefnSite = true
+
+newlines.alwaysBeforeTopLevelStatements = true
+
+rewrite.rules = [SortModifiers]
+rewrite.rules = [SortImports]
